--- a/db/package.json
+++ b/db/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "seed": "npx tsx prisma/seed.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "prisma": "5.22.0"
+    "@types/node": "^22.9.0",
+    "prisma": "5.22.0",
+    "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@prisma/client": "5.22.0"
+    "@prisma/client": "5.22.0",
+    "tsx": "^4.19.2"
   }
 }
