--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,18 +1,19 @@
 {
-	"useTabs": true,
+	"useTabs": false,
 	"singleQuote": true,
 	"trailingComma": "none",
 	"printWidth": 100,
+	"tabWidth": 2,
 	"plugins": [
-		"prettier-plugin-svelte",
-		"prettier-plugin-tailwindcss"
+	  "prettier-plugin-svelte",
+	  "prettier-plugin-tailwindcss"
 	],
 	"overrides": [
-		{
-			"files": "*.svelte",
-			"options": {
-				"parser": "svelte"
-			}
+	  {
+		"files": "*.svelte",
+		"options": {
+		  "parser": "svelte"
 		}
+	  }
 	]
-}
+  }
