--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@tailwindcss/typography": "^0.5.15",
+		"@types/dompurify": "^3.0.5",
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.14",
@@ -35,6 +36,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
-		"bad-words": "^4.0.0"
+		"bad-words": "^4.0.0",
+		"dompurify": "^3.2.0"
 	}
 }
