--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,10 @@
     "start": "node dist/index.js",
     "prepare": "npx prisma generate",
     "dev": "ts-node-dev --respawn --transpile-only index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "format": "prettier --write \"**/*.{ts,json,md,prisma}\""
   },
   "repository": {
     "type": "git",
@@ -34,8 +37,14 @@
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "concurrently": "^9.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "nodemon": "^3.1.7",
+    "prettier": "^3.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   }
