--- a/db/package.json
+++ b/db/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "seed": "npx tsx prisma/seed.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky"
   },
   "author": "",
   "license": "ISC",
