--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@auth0/auth0-spa-js": "^2.1.3",
 		"bad-words": "^4.0.0",
 		"dompurify": "^3.2.0",
 		"svelte-dnd-action": "^0.9.52"
