--- a/server/package.json
+++ b/server/package.json
@@ -29,9 +29,12 @@
   "dependencies": {
     "@fastify/cors": "^10.0.1",
     "@fastify/helmet": "^12.0.1",
+    "@fastify/multipart": "^9.0.1",
     "@fastify/swagger": "^9.3.0",
     "@fastify/swagger-ui": "^5.1.0",
     "@prisma/client": "^5.22.0",
+    "auth0": "^4.13.0",
+    "cloudinary": "^2.5.1",
     "fastify": "^5.1.0",
     "zod": "^3.23.8"
   },
