Add database setup files and scripts
- Introduced a new `.env.example` file to provide a template for database connection configuration.
- Updated `package.json` with new Prisma-related scripts for database management, including migration and seeding commands.
- Created a comprehensive `README.md` to guide users through the database setup, environment configuration, and available scripts.
- Enhanced the seeding script to include a test user for sample listings.

--- a/db/package.json
+++ b/db/package.json
@@ -2,10 +2,17 @@
   "name": "db",
   "version": "1.0.0",
   "main": "index.js",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "scripts": {
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
+    "db:studio": "prisma studio",
+    "db:reset": "prisma migrate reset",
     "seed": "npx tsx prisma/seed.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
