Add storage provider abstraction and configuration
- Introduced a flexible storage provider architecture allowing easy switching between Cloudinary, AWS S3, and Cloudflare R2.
- Created a new `StorageProvider` interface and implemented `CloudinaryProvider` for handling image uploads and management.
- Updated the `ImageService` to utilize the storage provider abstraction, enabling seamless integration of different storage solutions.
- Added `.dockerignore` and `.gcloudignore` files to exclude unnecessary files from Docker and Google Cloud deployments.
- Enhanced the `.env.example` to include optional storage provider configurations and updated the README to reflect these changes.

--- a/server/.env.example
+++ b/server/.env.example
@@ -7,8 +7,24 @@ HOST=::
 # Format: postgresql://username:password@host:port/database
 DATABASE_URL=postgresql://postgres:password@localhost:5432/jsclassified
 
-# Cloudinary Configuration (Required)
+# Storage Provider Configuration (Optional)
+# Options: 'cloudinary' (default), 'aws-s3', 'cloudflare-r2'
+STORAGE_PROVIDER=cloudinary
+
+# Cloudinary Configuration (Required if using Cloudinary)
 # Get your credentials from https://cloudinary.com/console
 CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
+
+# AWS S3 Configuration (Required if using AWS S3)
+# AWS_ACCESS_KEY_ID=your_access_key
+# AWS_SECRET_ACCESS_KEY=your_secret_key
+# AWS_REGION=us-east-1
+# AWS_S3_BUCKET=your_bucket_name
+
+# Cloudflare R2 Configuration (Required if using Cloudflare R2)
+# CLOUDFLARE_ACCOUNT_ID=your_account_id
+# CLOUDFLARE_ACCESS_KEY_ID=your_access_key
+# CLOUDFLARE_SECRET_ACCESS_KEY=your_secret_key
+# CLOUDFLARE_R2_BUCKET=your_bucket_name
