Refactor Dockerfile and cloudbuild.yaml for improved build process
- Updated cloudbuild.yaml to build the Docker image from the root directory, allowing access to both server and db directories.
- Modified Dockerfile to copy package files from the server directory and ensure the correct Prisma schema is included.
- Adjusted installation commands to skip unnecessary scripts and ensure Prisma Client generation occurs after schema copying.

--- a/server/cloudbuild.yaml
+++ b/server/cloudbuild.yaml
@@ -1,5 +1,6 @@
 steps:
   # Build the Docker image
+  # Build from root directory to access both server/ and db/ directories
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'build'
@@ -7,8 +8,10 @@ steps:
       - 'gcr.io/$PROJECT_ID/js-classified-server:$SHORT_SHA'
       - '-t'
       - 'gcr.io/$PROJECT_ID/js-classified-server:latest'
+      - '-f'
+      - 'server/Dockerfile'
       - '.'
-    dir: 'server'
+    # No 'dir' specified - build from repo root
 
   # Push the Docker image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
