--- a/server/cloudbuild.yaml
+++ b/server/cloudbuild.yaml
@@ -5,9 +5,9 @@ steps:
     args:
       - 'build'
       - '-t'
-      - 'gcr.io/$PROJECT_ID/js-classified-server:$SHORT_SHA'
+      - 'gcr.io/$PROJECT_ID/locful-api:$SHORT_SHA'
       - '-t'
-      - 'gcr.io/$PROJECT_ID/js-classified-server:latest'
+      - 'gcr.io/$PROJECT_ID/locful-api:latest'
       - '-f'
       - 'server/Dockerfile'
       - '.'
@@ -17,35 +17,39 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'gcr.io/$PROJECT_ID/js-classified-server:$SHORT_SHA'
+      - 'gcr.io/$PROJECT_ID/locful-api:$SHORT_SHA'
 
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'gcr.io/$PROJECT_ID/js-classified-server:latest'
+      - 'gcr.io/$PROJECT_ID/locful-api:latest'
 
-  # Deploy to Cloud Run (optional - uncomment if using Cloud Run)
-  # - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  #   entrypoint: gcloud
-  #   args:
-  #     - 'run'
-  #     - 'deploy'
-  #     - 'js-classified-server'
-  #     - '--image'
-  #     - 'gcr.io/$PROJECT_ID/js-classified-server:$SHORT_SHA'
-  #     - '--region'
-  #     - 'us-central1'
-  #     - '--platform'
-  #     - 'managed'
-  #     - '--memory'
-  #     - '512Mi'
-  #     - '--cpu'
-  #     - '1'
-  #     - '--allow-unauthenticated'
+  # Deploy to Cloud Run automatically after build
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: gcloud
+    args:
+      - 'run'
+      - 'deploy'
+      - 'locful-api'
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/locful-api:$SHORT_SHA'
+      - '--region'
+      - 'asia-southeast1'
+      - '--platform'
+      - 'managed'
+      - '--memory'
+      - '512Mi'
+      - '--cpu'
+      - '1'
+      - '--allow-unauthenticated'
+      - '--set-secrets'
+      - 'DATABASE_URL=DATABASE_URL:latest,CLOUDINARY_CLOUD_NAME=CLOUDINARY_CLOUD_NAME:latest,CLOUDINARY_API_KEY=CLOUDINARY_API_KEY:latest,CLOUDINARY_API_SECRET=CLOUDINARY_API_SECRET:latest'
+      - '--set-env-vars'
+      - 'PORT=8080'
 
 images:
-  - 'gcr.io/$PROJECT_ID/js-classified-server:$SHORT_SHA'
-  - 'gcr.io/$PROJECT_ID/js-classified-server:latest'
+  - 'gcr.io/$PROJECT_ID/locful-api:$SHORT_SHA'
+  - 'gcr.io/$PROJECT_ID/locful-api:latest'
 
 options:
   # Use default machine type to avoid quota restrictions
