--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -62,7 +62,7 @@ EXPOSE 8080
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD node -e "require('http').get('http://localhost:8080/ping', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
+  CMD node -e "require('http').get('http://localhost:8080/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
 
 # Optimize Node.js for 512MB memory constraint
 # --max-old-space-size sets heap limit (leave room for system, use ~400MB)
